2007-09-22  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file), output.c (output_finish,
	output_bytes, print_base16): Add a CRC on RAW output as well.

	* NEWS, README: Update.

	* parse.c (read_secrets_file), output.c (print_base16): Add an
	overall CRC that covers the whole secrets file.

	* output.c (output_length16): Fix sizing bug.  Thanks to Peter
	Palfrader.
	(output_start): Show what version of paperkey generated a given
	file.

	* extract.c (extract), restore.c (extract_keys): Include a version
	number in the secrets, in case the format needs to change in the
	future.

	* restore.c (extract_keys): Some more rigorous consistency
	checking when pulling apart the secret image.  It's possible that
	OCR or the like mangled it.

	* parse.c (extract_secrets): We're not going to support v3 keys.

	* restore.c (restore): Properly handle extracting a public key out
	from a large keyring so we can just pass our pubring directly to
	--pubring.

	* packets.h, output.c, output.h, extract.c, parse.c, parse.h,
	extract.h, paperkey.c, restore.c, restore.h, packets.c: Add
	copyright statements (oops).  Thanks to Peter Palfrader.

2007-09-21  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: Release version 0.5.

$Id$